# rubbish_plan_assume

./: App.tsx  README.md  constants.ts  index.html  manifest.json  metadata.json  package.json  pnpm-lock.yaml  service-worker.js  types.ts  utils.ts
components/: DaySelector.tsx  DayView.tsx  WeekSelector.tsx  WeekView.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
